# hackathon-tiktok-shop-recommendation-engine

./: README.md  docker-compose.dev.yml
api-node/: .air.toml  .gitignore  Dockerfile.dev  Makefile  go.mod  go.sum  main.go  readme.md
api-node/cmd/: seed.go
api-node/cmd/generate_proto/: main.go
api-node/cmd/migrate/: main.go
api-node/cmd/migration_generator/: main.go
api-node/cmd/purge_db/: main.go
api-node/cmd/seed/: main.go
api-node/internal/config/: config.go
api-node/internal/handlers/: article_handler.go  interaction_handler.go  recommendation_handler.go  shop_handler.go  user_handler.go
api-node/internal/middleware/: jwt_middleware.go
api-node/internal/models/: content.go  event.go  recommendation.go  shop.go  user.go
api-node/internal/routes/: article_routes.go  interaction_routes.go  recommendation_routes.go  routes.go  shop_routes.go  user_routes.go
api-node/migrations/: 20240817181246_create_schema.up.sql
frontend/: .env.example  Dockerfile.dev  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/products/: page.tsx
frontend/components/: Card.module.css  Card.tsx  Product.module.css  Product.tsx
frontend/public/: articles.json  products_dummy_data.json
recommendation-node/: Dockerfile.dev  pyproject.toml  readme.md
recommendation-node/protos/: recommendation.proto
recommendation-node/recommendation/: recommendation_pb2.py  recommendation_pb2.pyi  recommendation_pb2_grpc.py  scripts.py  server.py
recommendation-node/recommendation/servicers/: recommendation.py
(+12 files in other folders)
